[package]
name = "rtrim"
version = "0.1.1"
edition = "2021"
authors = ["Raul Souza"]
description = "High-performance atomic trailing whitespace remover"
license = "MIT"
repository = "https://github.com/raul3k/rtrim"
keywords = ["cli", "whitespace", "trim", "utility"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
